--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap"
+      href="https://fonts.googleapis.com/css?family=Bungee|Homemade+Apple&display=swap"
       rel="stylesheet"
     />
     <title>Static Template</title>
   </head>
   <body>
     <div class="container">
-      <div class="frame"></div>
+      <div class="frame">
+        <section class="header">
+          <button class="header-btn">Add</button>
+          <h1 class="header-title">To do list</h1>
+          <button class="header-btn main-red-color">Clear</button>
+        </section>
+        <section class="add">
+          <form action="" class="add-form">
+            <input type="text" class="add-input" />
+            <button class="add-btn">Add</button>
+          </form>
+        </section>
+      </div>
     </div>
   </body>
 </html>
