--- a/index.html
+++ b/index.html
@@ -9,65 +9,65 @@
       href="https://fonts.googleapis.com/css?family=Bungee|Homemade+Apple&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
     <title>Static Template</title>
   </head>
   <body>
-    <div class="container">
-      <div class="frame">
-        <section class="header">
-          <button class="header-btn">Add</button>
-          <h1 class="header-title">To do list</h1>
-          <button class="header-btn main-red-color">Clear</button>
-        </section>
-        <section class="add">
-          <form action="" class="add-form">
-            <input type="text" class="add-input" />
-            <button class="add-btn">Add</button>
-          </form>
-        </section>
-        <section class="todos">
-          <div class="todo">
-            <span class="todo-text">
-              Learning React
-            </span>
-          </div>
-          <div class="todo">
-            <span class="todo-text">
-              Learning React
-            </span>
-          </div>
-          <div class="todo">
-            <span class="todo-text">
-              Learning React
-            </span>
-          </div>
-          <div class="todo">
-            <span class="todo-text">
-              Learning React
-            </span>
-          </div>
-          <div class="todo">
-            <span class="todo-text">
-              Learning React
-            </span>
-          </div>
-          <div class="todo">
-            <span class="todo-text">
-              Learning React
-            </span>
-          </div>
-          <div class="todo">
-            <span class="todo-text">
-              Learning React
-            </span>
-          </div>
-          <div class="todo">
-            <span class="todo-text">
-              Learning React
-            </span>
-          </div>
-        </section>
-      </div>
-    </div>
+    <!-- Sebagai tempat untuk React omponent berada -->
+    <div id="root"></div>
+
+    <script type="text/babel">
+      class App extends React.Component {
+        render() {
+          return (
+            <div class="container">
+              <div class="frame">
+                <section class="header">
+                  <button class="header-btn">Add</button>
+                  <h1 class="header-title">To do list</h1>
+                  <button class="header-btn main-red-color">Clear</button>
+                </section>
+                <section class="add">
+                  <form action="" class="add-form">
+                    <input type="text" class="add-input" />
+                    <button class="add-btn">Add</button>
+                  </form>
+                </section>
+                <section class="todos">
+                  <div class="todo">
+                    <span class="todo-text">Learning React</span>
+                  </div>
+                  <div class="todo">
+                    <span class="todo-text">Learning React</span>
+                  </div>
+                  <div class="todo">
+                    <span class="todo-text">Learning React</span>
+                  </div>
+                  <div class="todo">
+                    <span class="todo-text">Learning React</span>
+                  </div>
+                  <div class="todo">
+                    <span class="todo-text">Learning React</span>
+                  </div>
+                  <div class="todo">
+                    <span class="todo-text">Learning React</span>
+                  </div>
+                  <div class="todo">
+                    <span class="todo-text">Learning React</span>
+                  </div>
+                  <div class="todo">
+                    <span class="todo-text">Learning React</span>
+                  </div>
+                </section>
+              </div>
+            </div>
+          );
+        }
+      }
+
+      ReactDOM.render(<App />, document.getElementById("root"));
+    </script>
   </body>
 </html>
